# person_finder

./: .env.example  .gitignore  .lsa.yaml  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
docs/: c4-1-context.md  c4-2-container.md  c4-3-component.md  c4-4-code.md
specs/: main.spec.md  research-backlog.md  roadmap.md
specs/archive/langchain-agent/: warnings.md
specs/features/deepeval-llm-judge-suite/: design.md  requirements.md  tasks.md  test-suites.md
specs/features/langchain-agent/: design.md  requirements.md  tasks.md  test-suites.md
specs/features/validate-output-retry-loop/: design.md  requirements.md  tasks.md  test-suites.md
specs/modules/agent/: spec.md
specs/modules/eval/: spec.md
specs/modules/render/: spec.md
specs/modules/scaffolding/: spec.md
specs/modules/users/: spec.md
specs/modules/validation/: spec.md
specs/standards/: code.md  testing.md
src/person_finder/: __init__.py  __main__.py  agent.py  best_work_agent.py  config.py  main.py  person_loader.py  person_lookup_agent.py  render.py  text.py  tools.py  users.py  validation.py  wikipedia.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_pipeline.py
tests/eval/: __init__.py  conftest.py  judge.py  metrics.py  stub_agents.py  test_correctness.py  test_fixtures.py  test_info_present.py  test_live_agent.py  test_metric_failure_modes.py  test_person_matches.py  test_precision.py  test_valid_json.py
tests/unit/: conftest.py  test_agent.py  test_best_work_agent.py  test_config.py  test_main.py  test_person_loader.py  test_person_lookup_agent.py  test_render.py  test_tools.py  test_users.py  test_validation.py  test_wikipedia.py
