[project]
name = "person_finder"
version = "0.1.0"
description = "Fetches random users, enriches each via a LangChain ReAct agent, returns validated JSON."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "person_finder contributors" }]

# Runtime dependencies. DeepEval is dev-only (eval tier is test
# infrastructure, not application runtime) and lives under
# `[dependency-groups] dev` below. The Gemini judge SDK is deferred to the
# follow-up live-judge epic — see specs/modules/eval/spec.md NF3.
dependencies = [
    "httpx>=0.27,<1",
    "langchain>=1,<2",
    "langchain-groq>=1,<2",
    "pydantic-settings>=2.6,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/person_finder"]

[dependency-groups]
dev = [
    # Eval tier (tests/eval/). Pinned to the major actually installed; bump
    # the upper bound deliberately when DeepEval ships a new major. The
    # Gemini judge SDK is NOT installed here — the live judge path is a
    # follow-up epic and will pick the SDK at that point. The deterministic
    # metrics (the only thing this epic exercises) do not call the judge.
    "deepeval>=4.0,<5",
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
# `src/` layout: tell pytest where the importable package lives without
# needing an editable install for collection.
pythonpath = ["src"]
testpaths = ["tests/unit", "tests/eval", "tests/e2e"]
addopts = "-ra"
