[project]
name = "person_finder"
version = "0.1.0"
description = "Fetches random users and asks a Groq LLM to identify each one; returns typed JSON."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "person_finder contributors" }]

dependencies = [
    "langchain>=1,<2",
    "langchain-community>=0.4.2",
    "langchain-groq>=1,<2",
    "python-dotenv>=1,<2",
    "wikipedia>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/person_finder"]

[dependency-groups]
dev = [
    "deepeval>=4.0,<5",
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
# `src/` layout: tell pytest where the importable package lives without
# needing an editable install for collection.
pythonpath = ["src"]
testpaths = ["tests/unit", "tests/eval", "tests/e2e"]
addopts = "-ra"
